--- a/public/search/index.html
+++ b/public/search/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html itemscope itemtype="http://schema.org/WebPage" lang="es" class="no-js">
-  <head>
+  <head><script src="/certificado/web/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=certificado/web/livereload" data-no-instant defer></script>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
 
 
 <link rel="shortcut icon" href="/certificado/web/favicons/favicon.ico" >
@@ -20,7 +20,7 @@
 <title>Search Results | Desarrollo web</title>
 <meta name="description" content="">
 
-<meta property="og:url" content="http://web.infenlaces.com/certificado/web/search/">
+<meta property="og:url" content="http://localhost:1313/certificado/web/search/">
   <meta property="og:site_name" content="Desarrollo web">
   <meta property="og:title" content="Search Results">
   <meta property="og:description" content="Powerful, extensible, and feature-packed frontend toolkit. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.">
@@ -34,7 +34,7 @@
   <meta name="twitter:description" content="Powerful, extensible, and feature-packed frontend toolkit. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.">
 
 
-<link rel="preload" href="/certificado/web/scss/main.scss" as="style"><link href="/certificado/web/scss/main.scss" rel="stylesheet">
+<link href="/certificado/web/scss/main.css" rel="stylesheet">
 <script
   src="https://code.jquery.com/jquery-3.7.1.min.js"
   integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
@@ -108,8 +108,8 @@
 </footer>
 
     </div>
-    <script src="/certificado/web/js/main.min.dbaa6fdeb1b5c1f9cfb2aedfdd81b70cae858b2fece26d36a25fb8594c0709ab.js" integrity="sha256-26pv3rG1wfnPsq7f3YG3DK6Fiy/s4m02ol&#43;4WUwHCas=" crossorigin="anonymous"></script>
-<script defer src="/certificado/web/js/click-to-copy.min.73478a7d4807698aed7e355eb23f9890ca18fea3158604c8471746d046702bad.js" integrity="sha256-c0eKfUgHaYrtfjVesj&#43;YkMoY/qMVhgTIRxdG0EZwK60=" crossorigin="anonymous"></script>
+    <script src="/certificado/web/js/main.js"></script>
+<script defer src="/certificado/web/js/click-to-copy.js" crossorigin="anonymous"></script>
 <script src='/certificado/web/js/tabpane-persist.js'></script>
 
   </body>
